--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "ts-watch": "^1.0.8",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "uuid": "^9.0.0"
   }
 }
