--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.3.0",
     "webpack-dev-server": "^4.11.0"
   },
   "devDependencies": {
