--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.4.0",
     "@types/babel__generator": "^7.6.4",
+    "@types/bootstrap": "^5.2.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
