--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "jodit-react": "^1.3.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
