--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && \"mkdirp /dist/api/src/media\"",
     "dev": "nodemon ./src/index.ts",
+    "start": "node ./dist/api/src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -21,5 +23,8 @@
     "ts-watch": "^1.0.8",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "mkdirp": "^1.0.4"
   }
 }
