--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "start": "serve dist -p 80"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +16,12 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "jodit-react": "^1.3.20",
+    "proxy": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
+    "serve": "^14.0.1",
     "webpack-dev-server": "^4.11.0"
   },
   "devDependencies": {
